Updated some sonar issues